<resources>
    <string name="title_activity_login_main">LoginMainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="app_name">Logindemo</string>
    <string name="login_by_password">密码登录</string>
    <string name="login_by_vertifycode">验证码登录</string>
    <string name="phone_number">手机号码</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="login_password">登录密码</string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登   录</string>
    <string name="inout_new_password">输入新密码</string>
    <string name="inout_new_password_hint">请输入新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="confirm_new_password_again">请再次确认新密码</string>
    <string name="verifycode">   验证码：</string>
    <string name="input_verifycode">请输入验证码</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="done">确   认</string>
</resources>